測試flask能否執行

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section id="contact" class="contact container">
         <h2>聯繫我</h2>
-        <form action="contact.html" method="post">
+        <form action="/contact" method="post">
             <label for="name">姓名：</label>
             <input type="text" id="name" name="name" required>
             
